--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
@@ -11,6 +11,7 @@
         android:id="@+id/bus_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_margin="16dp"
         android:layout_weight="1">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -20,5 +21,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:layout_marginEnd="16dp"
         android:text="@string/button_text" />
 </LinearLayout>
