--- a/NokiaHslVisualisation/app/src/main/res/navigation/nav_graph.xml
+++ b/NokiaHslVisualisation/app/src/main/res/navigation/nav_graph.xml
@@ -36,4 +36,9 @@
             android:id="@+id/action_action_bus_to_action_list"
             app:destination="@id/action_list" />
     </fragment>
+    <fragment
+        android:id="@+id/ar_view"
+        android:name="com.xpyx.nokiahslvisualisation.fragments.ARFragment"
+        android:label="@string/menu_ar"
+        tools:layout="@layout/ar_scene" />
 </navigation>
