--- a/NokiaHslVisualisation/app/src/main/res/layout/ar_scene.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/ar_scene.xml
@@ -7,13 +7,18 @@
     tools:context=".MainActivity">
 
     <fragment
-        android:name="com.google.ar.sceneform.ux.ArFragment"
         android:id="@+id/fragment"
+        android:name="com.google.ar.sceneform.ux.ArFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <com.mapbox.mapboxsdk.maps.MapView
+        android:id="@+id/mapView"
+        android:layout_width="match_parent"
+        android:layout_height="145dp"
+        android:layout_weight="3" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
