--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
@@ -17,7 +17,7 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/traffic_refresh_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
