--- a/NokiaHslVisualisation/app/src/main/res/layout/list_view_item.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/list_view_item.xml
@@ -19,7 +19,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bus_icon_image_view_black"
+            app:srcCompat="@drawable/warning_icon"
             app:tint="@color/black"
             android:contentDescription="@string/bus_icon_content_description" />
 
@@ -27,10 +27,10 @@
             android:id="@+id/title_text_view"
             android:layout_width="0dp"
             android:layout_height="32dp"
-            android:textSize="24sp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,9 +40,9 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
