--- a/NokiaHslVisualisation/app/src/main/res/navigation/nav_graph.xml
+++ b/NokiaHslVisualisation/app/src/main/res/navigation/nav_graph.xml
@@ -11,11 +11,7 @@
         android:id="@+id/action_home"
         android:name="com.xpyx.nokiahslvisualisation.fragments.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_action_home_to_alertDetailsFragment"
-            app:destination="@id/alertDetailsFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/action_list"
         android:name="com.xpyx.nokiahslvisualisation.fragments.list.ListFragment"
@@ -45,13 +41,4 @@
         android:name="com.xpyx.nokiahslvisualisation.fragments.ar.ARFragment"
         android:label="@string/menu_ar"
         tools:layout="@layout/ar_scene" />
-    <fragment
-        android:id="@+id/alertDetailsFragment"
-        android:name="com.xpyx.nokiahslvisualisation.fragments.alertdetails.AlertDetailsFragment"
-        android:label="fragment_alert_details"
-        tools:layout="@layout/fragment_alert_details" >
-        <action
-            android:id="@+id/action_alertDetailsFragment_to_action_home"
-            app:destination="@id/action_home" />
-    </fragment>
 </navigation>
