--- a/NokiaHslVisualisation/app/src/main/res/layout/alert_list_item.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/alert_list_item.xml
@@ -32,7 +32,7 @@
             android:layout_marginTop="48dp"
             android:layout_marginEnd="8dp"
             android:text="TextView"
-            android:textSize="24sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -51,6 +51,17 @@
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.551" />
+
+        <TextView
+            android:id="@+id/alert_desc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/alert_title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
