--- a/NokiaHslVisualisation/app/src/main/res/layout/alert_list_item.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/alert_list_item.xml
@@ -44,6 +44,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+
             android:text="TextView"
             app:layout_constraintBottom_toTopOf="@+id/alert_title"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,8 +60,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/alert_title" />
 
