--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_traffic_details.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_traffic_details.xml
@@ -27,8 +27,7 @@
             android:id="@+id/traffic_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="32sp"
-            />
+            android:textSize="32sp" />
 
         <TextView
             android:id="@+id/traffic_time"
