--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_traffic_details.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_traffic_details.xml
@@ -3,18 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginTop="5dp"
     android:orientation="vertical"
     tools:context=".fragments.trafficdetails.TrafficDetailsFragment">
 
 
-    <TextView
-        android:id="@+id/map_here"
+    <org.osmdroid.views.MapView
+        android:id="@+id/map_view_traffic"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:textSize="50sp"
-        android:textAlignment="center"
-        android:text="MAP HERE WITH LOCATION" />
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
