--- a/NokiaHslVisualisation/app/src/main/res/layout/alert_list_item.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/alert_list_item.xml
@@ -27,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:textSize="12sp"
+            android:textColor="?attr/colorOnSecondary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:textSize="20sp"
+            android:textColor="?attr/colorOnSecondary"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -50,6 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:textSize="16sp"
+            android:textColor="?attr/colorOnSecondary"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -62,6 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:textSize="12sp"
+            android:textColor="?attr/colorOnSecondary"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -74,6 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:textSize="12sp"
+            android:textColor="?attr/colorOnSecondary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -85,6 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:textSize="12sp"
+            android:textColor="?attr/colorOnSecondary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
