--- a/NokiaHslVisualisation/app/src/main/res/layout/list_view_item.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/list_view_item.xml
@@ -31,6 +31,7 @@
             android:layout_marginTop="0dp"
             android:layout_marginEnd="16dp"
             android:textSize="12sp"
+            android:textColor="?attr/colorOnSecondary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +44,7 @@
             android:layout_marginTop="0dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="0dp"
+            android:textColor="?attr/colorOnSecondary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
