--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
@@ -18,20 +18,23 @@
 
     <TextView
         android:id="@+id/textViewMsgPayload"
-        android:layout_width="427dp"
-        android:layout_height="209dp"
+        android:layout_width="406dp"
+        android:layout_height="113dp"
         android:layout_marginTop="24dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumMsgs" />
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height=""
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMsgPayload"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-2dp"
+        android:layout_height="0dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
