--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_home.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
     <!-- The navigation drawer that comes from the left -->
     <!-- Note that `android:layout_gravity` needs to be set to 'start' -->
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nvView"
+        android:id="@+id/nav_drawer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
